Aggiunta di classi Service e relativa implementazione per la gestione delle dinamiche della battaglia e refactoring delle entità di gioco